Update documentation of memory settings
`MaxPermSize` was removed in Java 8 and wording needed a few fixes.